clang/test/BSC/Negative/Ownership/RuleCheck/Maple/func_call/func_call.cbs
// RUN: %clang_cc1 -verify %s

struct C {
    int * _Owned a;
    int * _Owned b;
};

struct B {
    int * _Owned a;
    int * _Owned b;
    struct C * _Owned c;
};

struct A {
    struct B b;
    struct B * _Owned c;
    struct B d;
    struct A * f;
};

int * _Owned IntPtrOwned() {
    int * _Owned a;
    return a; // expected-error {{use of uninitialized value: `a`}}
}

void func1(int * _Owned * _Owned * _Owned a, int * _Owned * _Owned * _Owned b) {
    int * _Owned c = IntPtrOwned();
    int * _Owned d = c;
    int * _Owned e = c; // expected-error {{use of moved value: `c`}}
} // expected-error {{memory leak of value: `a`}} expected-error {{field memory leak of value: `a`, *a, **a are leak}} expected-error {{memory leak of value: `b`}} expected-error {{field memory leak of value: `b`, *b, **b are leak}} expected-error {{memory leak of value: `d`}} expected-error {{memory leak of value: `e`}}

void * _Owned VoidPtrOwned_err(struct C * _Owned c) {
    int *d = __move_to_raw(c->a);
    d = __move_to_raw(c->b);
    return (void * _Owned)c;
}

void * _Owned VoidPtrOwned_succ(struct C * _Owned c) {
    struct C d = (struct C) *c;
    return (void * _Owned)c; // expected-error {{field memory leak of value: `d`, d.a, d.b are leak}}
}

int * _Owned IntOwned() {
    int * _Owned a;
    return a; // expected-error {{use of uninitialized value: `a`}}
}

void callee1(int * _Owned a, int * _Owned b) {} // expected-error {{memory leak of value: `a`}} expected-error {{memory leak of value: `b`}}

void caller1(int * _Owned a, int * _Owned b) {
    callee1(a, b);
}

void caller2(int * _Owned a, int * _Owned b) {
    int * _Owned c = a;
    callee1(a, b); // expected-error {{use of moved value: `a`}}
} // expected-error {{memory leak of value: `c`}}

void callee2(void * _Owned a) {} // expected-error {{memory leak of value: `a`}}

void caller3(void * _Owned a) {
    callee2(a);
}

void caller4(struct A * _Owned a) {
    struct A b = (struct A)*a;
    callee2((void * _Owned)a);
} // expected-error {{field memory leak of value: `b`, b.b.a, b.b.b, b.b.c, b.b.c.a, b.b.c.b, b.c, b.c.a, b.c.b, b.c.c... are leak}}

void caller5(struct A * _Owned a) {
    callee2((void * _Owned)a); // expected-error {{invalid cast to `void * _Owned` of not all moved value: `a`, a.b.a, a.b.b, a.b.c, a.b.c.a, a.b.c.b, a.c, a.c.a, a.c.b, a.c.c... are _Owned}}
}

int main() { return 0; }